PR/39519: Nozomu Ando: Fix incorrect change from bind9 that broke IPv4 mapped addresses.