lib/libc/inet/inet_ntop.c
@@ -1,4 +1,4 @@
-/*	$NetBSD: inet_ntop.c,v 1.6 2008/06/21 20:41:48 christos Exp $	*/
+/*	$NetBSD: inet_ntop.c,v 1.7 2008/09/11 15:40:43 christos Exp $	*/
 
 /*
  * Copyright (c) 2004 by Internet Systems Consortium, Inc. ("ISC")
@@ -22,7 +22,7 @@
 #if 0
 static const char rcsid[] = "Id: inet_ntop.c,v 1.5 2005/11/03 22:59:52 marka Exp";
 #else
-__RCSID("$NetBSD: inet_ntop.c,v 1.6 2008/06/21 20:41:48 christos Exp $");
+__RCSID("$NetBSD: inet_ntop.c,v 1.7 2008/09/11 15:40:43 christos Exp $");
 #endif
 #endif /* LIBC_SCCS and not lint */
 
@@ -207,8 +207,7 @@ inet_ntop6(src, dst, size)
 		    (best.len == 6 ||
 		    (best.len == 7 && words[7] != 0x0001) ||
 		    (best.len == 5 && words[5] == 0xffff))) {
-			if (!inet_ntop4(src+12, tp,
-			    (socklen_t)(sizeof(tmp) - (ep - tp))))
+			if (!inet_ntop4(src+12, tp, (socklen_t)(ep - tp)))
 				return (NULL);
 			tp += strlen(tp);
 			break;
